syntax = "proto3";

package chat;

service ChatService {

    // Bidirectional rpc
    rpc Chat(stream ChatMessage) returns (stream ChatMessage) {}
}

message ChatMessage {
    string name = 1;
    string message = 2;
}